# mysolver

./: .gitignore  AGENTS.md  Cargo.toml  hawk.toml  justfile  micro_opt_prompt.md  opencode.json  rust-toolchain.toml  super_opt_prompt.md
.codex/: config.toml
crates/arena/: Cargo.toml
crates/arena/src/: lib.rs
crates/bitsum/: Cargo.toml
crates/bitsum/src/: lib.rs  parse.rs
crates/bitsum/tests/: instr.rs
crates/bitsum/tests/ui/fail/: colliding_generated_names.rs  colliding_generated_names.stderr  duplicate_bits_attr.rs
crates/bitsum/tests/ui/pass/: module_macro_visibility.rs
crates/euf/: Cargo.toml
crates/euf-core/: Cargo.toml
crates/euf-core/src/: fuel.rs  lib.rs  outcome.rs  term.rs
crates/euf/src/: arena.rs  explain.rs  ids.rs  lib.rs  registry.rs  search_state.rs  telemetry.rs  theory.rs  types.rs
crates/euf/src/registry/: mod.rs  object.rs  storage.rs
crates/harness/: Cargo.toml
crates/harness/src/: benchmark.rs  case_io.rs  child.rs  cli.rs  compare.rs  discover.rs  jobs.rs  lib.rs  main.rs  model.rs  parent.rs  render.rs  util.rs
crates/lower/: Cargo.toml
crates/lower/src/: lib.rs
crates/lower/tests/: qf_uf.rs
crates/mysolver-cli/: Cargo.toml
crates/mysolver-cli/src/: main.rs
crates/observability-exp/: Cargo.toml  observability.md
crates/qfuf/: Cargo.toml
crates/qfuf-telemetry/: Cargo.toml
crates/qfuf-telemetry/src/: lib.rs
crates/qfuf/src/: driver.rs  lib.rs  main.rs  parser.rs  types.rs
crates/sat/: Cargo.toml
crates/sat-harness/: Cargo.toml
crates/sat-harness/src/: child.rs  cli.rs  compare.rs  discover.rs  lib.rs  main.rs  model.rs  parent.rs  render.rs  util.rs
crates/sat/src/: clause_db.rs  dimacs.rs  heap.rs  lib.rs  telemetry.rs  theory.rs  types.rs
crates/sat/src/solver/: add.rs  analyze.rs  mod.rs  propagate.rs  search.rs
crates/sat/src/telemetry/: disabled.rs  enabled.rs  mod.rs
crates/smtlib-lexer/: Cargo.toml
crates/smtlib-lexer/src/: lib.rs
crates/smtlib-lower/: Cargo.toml
crates/smtlib-lower/src/: lib.rs
crates/smtlib-syntax/: Cargo.toml
crates/smtlib-syntax/src/: lib.rs
crates/solver-core/: Cargo.toml
crates/solver-core/src/: lib.rs
crates/solver-core/tests/: qf_uf.rs
crates/telemetry/: Cargo.toml
crates/telemetry-exp/: Cargo.toml
crates/telemetry-exp/src/: lib.rs
crates/telemetry/src/: backend_atomic.rs  backend_cooperative.rs  lib.rs
docs/: euf-explain-redesign.md  impl-qf-uf.md  incremental-qf-uf-design.md  lower-incremental-checking-design.md  sat-engine-unsat-attempts.md
play/arena/src/: lib.rs
play/bitsum/: Cargo.toml
play/bitsum/src/: codegen.rs  ir.rs  support.rs
play/bitsum/tests/: ui.rs
play/bitsum/tests/ui/fail/: duplicate_bits_attr.stderr
play/bitsum/tests/ui/pass/: match_without_trailing_comma.rs
scripts/: bench_compare_stash.py  fetch_sat_benchmarks.py  fetch_sat_benchmarks.sh  fetch_smt_benchmarks.py
