[workspace]
members = ["crates/telemetry-exp", "crates/sat", "crates/sat-harness"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
missing_docs_in_private_items = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
panic = "abort"

[profile.perf]
inherits = "release"
debug = true
strip = false