[package]
name = "qfuf"
version = "0.1.0"
edition = "2024"

[features]
default = ["telemetry"]
telemetry = ["dep:telemetry", "euf/telemetry", "sat/telemetry"]

[dependencies]
euf = { path = "../euf", default-features = false }
telemetry = { path = "../telemetry", optional = true }
sat = { path = "../sat", default-features = false }

[lints]
workspace = true