[package]
name = "sat"
version.workspace = true
edition.workspace = true

[features]
default = ["telemetry"]
telemetry = ["dep:telemetry"]

[dependencies]
telemetry = { path = "../telemetry", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
