[package]
name = "sat"
version.workspace = true
edition.workspace = true

[features]
default = ["telemetry-atomic"]
telemetry = ["dep:telemetry"]
telemetry-atomic = ["telemetry"]
telemetry-cooperative = ["telemetry", "telemetry/backend-cooperative"]

[dependencies]
telemetry = { path = "../telemetry", optional = true, default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
