[package]
name = "solver-core"
version.workspace = true
edition.workspace = true

[dependencies]
euf-core = { path = "../euf-core" }
smtlib-lexer = { path = "../smtlib-lexer" }
smtlib-syntax = { path = "../smtlib-syntax" }

[dev-dependencies]
tar = "0.4.44"
zstd = "0.13.3"

[lints]
workspace = true
