[package]
name = "telemetry-exp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "solver"
path = "src/bin/solver.rs"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
