[package]
name = "bitsum"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.114"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
missing_docs_in_private_items = "warn"

[lints.rust]
missing_docs = "warn"
